Fix additional spacing discrepancies and how the go back button works
- change the go back button to navigate to the queue instead of going back

--- a/src/components/NotFound/NotFound.module.scss
+++ b/src/components/NotFound/NotFound.module.scss
@@ -10,6 +10,14 @@
     @include u-padding-bottom(2);
   }
 
+  .preheader {
+    font-size: 22px;
+  }
+
+  .preheaderQuip {
+    @include u-padding-top(2);
+  }
+
   h1 {
     @include u-padding-top(5);
 
@@ -41,6 +49,9 @@
   .description {
     @include u-padding-top(1);
     @include u-padding-bottom(10);
+
+    font-size: 15px;
+    line-height: 23px;
   }
 
   .explanation {
